[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/ControlU.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Processor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Music/UI-confirm.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Shop.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/default.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Office.gd" type="Script" id=9]
[ext_resource path="res://Scenes/ShopMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Slot0.gd" type="Script" id=11]
[ext_resource path="res://Assets/Characters/coffee.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/food.png" type="Texture" id=13]
[ext_resource path="res://Assets/Objects/clock.png" type="Texture" id=14]
[ext_resource path="res://Assets/Objects/hud-bar.png" type="Texture" id=15]
[ext_resource path="res://Assets/Objects/food-table.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 32.3692 )

[node name="Office" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="ControlU" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 400 )

[node name="Ainun" parent="." instance=ExtResource( 3 )]
position = Vector2( 107.773, 340.12 )

[node name="Nametag" type="Label" parent="Ainun"]
margin_left = -13.2269
margin_top = 22.4341
margin_right = 31.7731
margin_bottom = 45.4341
custom_fonts/font = ExtResource( 7 )
text = "Ainun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raden" parent="." instance=ExtResource( 3 )]
position = Vector2( 235.773, 340.12 )
character = 2

[node name="Nametag" type="Label" parent="Raden"]
margin_left = -19.5674
margin_top = 22.4341
margin_right = 32.4326
margin_bottom = 45.4341
custom_fonts/font = ExtResource( 7 )
text = "Raden"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anthony" parent="." instance=ExtResource( 3 )]
position = Vector2( 235.773, 212.12 )
character = 3

[node name="Nametag" type="Label" parent="Anthony"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0101
margin_top = 21.9492
margin_right = 42.9899
margin_bottom = 44.9492
custom_fonts/font = ExtResource( 7 )
text = "Anthony"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intan" parent="." instance=ExtResource( 3 )]
position = Vector2( 107.773, 212.12 )
character = 1

[node name="Nametag" type="Label" parent="Intan"]
margin_left = -19.5674
margin_top = 22.4341
margin_right = 32.4326
margin_bottom = 45.4341
custom_fonts/font = ExtResource( 7 )
text = "Intan"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" parent="." instance=ExtResource( 6 )]
position = Vector2( 484.022, 92.3167 )
z_index = -1

[node name="Nametag" type="Label" parent="Shop"]
margin_left = -19.5674
margin_top = 22.4341
margin_right = 32.4326
margin_bottom = 45.4341
custom_fonts/font = ExtResource( 7 )
text = "Shop"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Node2D" parent="."]

[node name="Slot0" type="Position2D" parent="Inventory"]
position = Vector2( 224, 85.5 )
z_index = -1
script = ExtResource( 11 )

[node name="Slot1" type="Position2D" parent="Inventory"]
position = Vector2( 288, 85.5 )
z_index = -1
script = ExtResource( 11 )

[node name="Slot2" type="Position2D" parent="Inventory"]
position = Vector2( 352, 85.5 )
z_index = -1
script = ExtResource( 11 )

[node name="Slot3" type="Position2D" parent="Inventory"]
position = Vector2( 416, 85.5 )
z_index = -1
script = ExtResource( 11 )

[node name="food" type="Sprite" parent="Inventory/Slot3"]
visible = false
texture = ExtResource( 13 )

[node name="coffee" type="Sprite" parent="Inventory/Slot3"]
visible = false
texture = ExtResource( 12 )

[node name="RigidBody2D" type="StaticBody2D" parent="Inventory"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inventory/RigidBody2D"]
position = Vector2( 320.011, 92.3167 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Inventory/RigidBody2D"]
position = Vector2( 320.011, 92.3167 )
z_index = -2
z_as_relative = false
texture = ExtResource( 16 )

[node name="ShopLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="ShopMenu" parent="ShopLayer" instance=ExtResource( 10 )]
visible = false

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="ColorRect" type="TextureRect" parent="TopBar"]
margin_left = 12.0
margin_top = 12.0
margin_right = 524.0
margin_bottom = 44.0
texture = ExtResource( 15 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" parent="TopBar/ColorRect" instance=ExtResource( 8 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 9.42045
margin_top = -11.8978
margin_right = 85.4204
margin_bottom = 13.1022
text = "Menu"
flat = true
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/ColorRect"]
anchor_left = 0.787
anchor_top = 0.54
anchor_right = 0.988
anchor_bottom = 0.611
margin_left = -282.944
margin_top = -15.28
margin_right = -10.856
margin_bottom = 12.448
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="TopBar/ColorRect/HBoxContainer"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = ExtResource( 7 )
text = "Level XX"
percent_visible = -0.142857
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="TopBar/ColorRect/HBoxContainer"]
margin_left = 90.0
margin_top = 3.0
margin_right = 120.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 7 )
text = "99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="TopBar/ColorRect/HBoxContainer"]
margin_left = 140.0
margin_top = 3.0
margin_right = 235.0
margin_bottom = 26.0
rect_min_size = Vector2( 95, 0 )
custom_fonts/font = ExtResource( 7 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="TopBar/ColorRect/HBoxContainer"]
margin_left = 255.0
margin_top = 3.0
margin_right = 381.0
margin_bottom = 26.0
rect_min_size = Vector2( 126, 0 )
custom_fonts/font = ExtResource( 7 )
text = "Cash: 0 bits"

[node name="Sprite" type="Sprite" parent="TopBar/ColorRect/HBoxContainer"]
position = Vector2( -3.157, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 14 )
offset = Vector2( 31.4006, -5.90589 )

[node name="Transition" parent="." instance=ExtResource( 4 )]

[node name="ColorRect" parent="Transition" index="0"]
visible = false

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 2 )]
layer = -2

[connection signal="grab_task" from="ControlU" to="." method="_on_ControlU_grab_task"]
[connection signal="open_shop" from="ControlU" to="." method="_on_ControlU_open_shop"]
[connection signal="buy_coffee" from="ShopLayer/ShopMenu" to="." method="_on_ShopMenu_buy_coffee"]
[connection signal="buy_food" from="ShopLayer/ShopMenu" to="." method="_on_ShopMenu_buy_food"]
[connection signal="close_shop" from="ShopLayer/ShopMenu" to="." method="_on_ShopMenu_close_shop"]
[connection signal="pressed" from="TopBar/ColorRect/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="animation_finished" from="Transition/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Ainun"]
[editable path="Transition"]
